<resources>
    <string name="app_name">CompaniesApp</string>
    <string name="error_email_password">Insira o e-mail e a senha</string>
    <string name="error_wrong_credentials">Usuário/senha incorretos. Por favor, tente novamente.</string>
    <string name="error_get_enterprises">Erro ao recuperar lista de empresas. Por favor, tente novamente.</string>
    <string name="hint_search">Pesquisar</string>
    <string name="title_welcome_login">BEM-VINDO AO  EMPRESAS</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="msg_description_lorem">Lorem ipsum dolor sit amet, contetur  adipiscing elit. Nunc accumsan.</string>
    <string name="msg_click_to_continue">Clique na busca para iniciar.</string>
</resources>
